# risc0

./: CUDA_ADVANCED_OPTIMIZATIONS.md  CUDA_OPTIMIZATION_PROPOSAL.md  Cargo.toml
fpga/: BASYS3_COMPATIBILITY_REPORT.md  Cargo.toml  README_BASYS3.md  risc0_fpga_constraints.xdc  risc0_fpga_constraints_fixed.xdc  risc0_fpga_interface.rs  risc0_fpga_riscv.v  risc0_fpga_riscv_fixed.v  risc0_fpga_riscv_simple.v  risc0_fpga_simple.v  risc0_fpga_testbench.v  risc0_fpga_testbench_fixed.v  risc0_fpga_top_fixed.v  sim
fpga/examples/: basys3_real_hardware_example.rs  complete_drop_in_replacement.rs  comprehensive_fpga_executor.rs  drop_in_replacement.rs  production_ready_executor.rs  simple_real_executor.rs  zeth_integration.rs
fpga/scripts/: build_fpga.sh  deploy_basys3.sh  deploy_basys3_simple_uart.sh  monitor_usb.sh  program_fpga.tcl  test_basys3_compatibility.sh
fpga/src/: basys3_executor.rs  basys3_hardware_interface.rs  comprehensive_tests.rs  lib.rs  real_hardware_interface.rs  risc0_fpga_interface.rs  simple_real_executor.rs  simplified_fpga_interface.rs
risc0/binfmt/src/: elf.rs  image.rs
risc0/circuit/rv32im-m3-sys/cxx/: .bazelrc  WORKSPACE
risc0/groth16/src/prove/: cuda.rs  mod.rs
risc0/r0vm/src/actors/: worker.rs
risc0/zkos/linux/elfs/: vmlinuz.elf
risc0/zkos/linux/src/: kernel.rs  linux_abi.rs  linux_abi_fs.rs  linux_abi_misc.rs  main.rs  p9.rs
risc0/zkp/src/hal/: cuda.rs
risc0/zkvm/examples/: datasheet.rs
rzup/: Cargo.toml  README.md
rzup/src/: build.rs  components.rs  events.rs  lib.rs
rzup/src/cli/: commands.rs  ui.rs
(+65 files in other folders)
