[package]
name = "risc0-fpga-interface"
version = "0.1.0"
edition = "2021"

[workspace]

[features]
docker = []

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
enum-iterator = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.0"
serde_json = "1.0"
tabled = "0.15"
serialport = "4.2"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
